crates/check_cli/tests/snapshots/main_commands_format/applies_configuration_from_check_jsonc.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.jsonc`

```json
{
  // Formatting options
  "formatter": {
    "lineWidth": 10,
    "indentStyle": "space",
    "indentWidth": 8
  }
}
```

## `file.js`

```js
function f() {
        return {
                a,
                b,
        };
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
