crates/check_cli/tests/snapshots/main_commands_format/applies_custom_attribute_position.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
<Foo
	className={style}
	reallyLongAttributeName1={longComplexValue}
	reallyLongAttributeName2={anotherLongValue}
/>;

<Foo
	reallyLongAttributeName1={longComplexValue}
	reallyLongAttributeName2={anotherLongValue}
>
	Hi
</Foo>;

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
