crates/check_cli/tests/snapshots/main_commands_format/applies_custom_bracket_same_line.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.jsx`

```jsx
<Foo
	className={style}
	reallyLongAttributeName1={longComplexValue}
	reallyLongAttributeName2={anotherLongValue}
/>;

<Foo
	className={style}
	reallyLongAttributeName1={longComplexValue}
	reallyLongAttributeName2={anotherLongValue}>
	Hi
</Foo>;

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
