crates/check_cli/tests/snapshots/main_commands_format/applies_custom_bracket_spacing_graphql.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.graphql`

```graphql
{
	field_value(object_value: {key: "value"})
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
