crates/check_cli/tests/snapshots/main_commands_format/applies_custom_configuration.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
function f() {
        return {
                a,
                b,
        };
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
