crates/check_cli/tests/snapshots/main_commands_format/applies_custom_jsx_quote_style.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.jsx`

```jsx
<div bar='foo' baz={"foo"} />;

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
