crates/check_cli/tests/snapshots/main_commands_format/applies_custom_quote_style.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
let a = 'something';
let b = {
	'hey': 'hello',
};

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
